viewport render (shift-z) seams going on even if preview samples are reached #51450

Closed
opened 2017-05-10 15:29:39 +02:00 by Nicola · 8 comments

System Information
windows 10, nvidia 970gtx (381.89)

Blender Version
Broken: 2.78.5 717d85f

Short description of error
viewport render (shift-z) seams going on even if preview samples are reached

Exact steps for others to reproduce the error
with the attached file strange_error.blend

  • start the viewport render (shift-z) on the left window (border camera view)
  • simply switch from solid to wire mode (many times) on the right window (perspective view)
  • see rendering still going on even if preview samples are reached (as show on png)

{F594315}render_wire_view.png

**System Information** windows 10, nvidia 970gtx (381.89) **Blender Version** Broken: 2.78.5 717d85f **Short description of error** viewport render (shift-z) seams going on even if preview samples are reached **Exact steps for others to reproduce the error** with the attached file [strange_error.blend](https://archive.blender.org/developer/F594319/strange_error.blend) - start the viewport render (shift-z) on the left window (border camera view) - simply switch from solid to wire mode (many times) on the right window (perspective view) - see rendering still going on even if preview samples are reached (as show on png) {[F594315](https://archive.blender.org/developer/F594315/render_solid_view.png)}![render_wire_view.png](https://archive.blender.org/developer/F594317/render_wire_view.png)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @NicolaFrascati

Added subscriber: @NicolaFrascati

Added subscriber: @brecht

Added subscriber: @brecht

It's not actually rendering more samples, but indeed the Time keeps increasing for some reason.

It's not actually rendering more samples, but indeed the Time keeps increasing for some reason.

I believe this issue was introduced in D2214, where a change was made to compute the time elapsed in Progress::get_time, which means every time it is requested for drawing. Previously it would be computed when updating e.g. the status, so when actual changes were happening.

I believe this issue was introduced in [D2214](https://archive.blender.org/developer/D2214), where a change was made to compute the time elapsed in `Progress::get_time`, which means every time it is requested for drawing. Previously it would be computed when updating e.g. the status, so when actual changes were happening.
Jeff Knox self-assigned this 2017-07-25 01:03:38 +02:00

This issue was referenced by blender/cycles@5208da3ab7

This issue was referenced by blender/cycles@5208da3ab75b3a28484e7245cac00e8c4099a754

This issue was referenced by e93804318f

This issue was referenced by e93804318f1d0161a0222c03f68ad5187f251f93

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51450
No description provided.