Fix T51450: viewport render time keeps increasing after render is done.

Reviewed By: brecht

Differential Revision: https://developer.blender.org/D2747